--- a/ELibrary_Team 1/Areas/Admin/Views/Documents/Edit.cshtml
+++ b/ELibrary_Team 1/Areas/Admin/Views/Documents/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@model ELibrary_Team_1.Models.Document
-
+﻿@model ELibrary_Team_1.ViewModels.DocumentViewModel
 @{
     ViewData["Title"] = "Edit";
 }
@@ -10,39 +9,48 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form enctype="multipart/form-data" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Document.Id" />
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+                <label asp-for="Document.Title" class="control-label"></label>
+                <input asp-for="Document.Title" class="form-control" />
+                <span asp-validation-for="Document.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Author" class="control-label"></label>
-                <input asp-for="Author" class="form-control" />
-                <span asp-validation-for="Author" class="text-danger"></span>
+                <label asp-for="Document.Author" class="control-label"></label>
+                <input asp-for="Document.Author" class="form-control" />
+                <span asp-validation-for="Document.Author" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UpdateDate" class="control-label"></label>
-                <input asp-for="UpdateDate" class="form-control" />
-                <span asp-validation-for="UpdateDate" class="text-danger"></span>
+                <label asp-for="Document.Description" class="control-label"></label>
+                <input asp-for="Document.Description" class="form-control" />
+                <span asp-validation-for="Document.Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
+
+
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsPublic" /> @Html.DisplayNameFor(model => model.IsPublic)
+                    <input class="form-check-input" asp-for="Document.IsPublic" /> @Html.DisplayNameFor(model => model.Document.IsPublic)
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="AverageRate" class="control-label"></label>
-                <input asp-for="AverageRate" class="form-control" />
-                <span asp-validation-for="AverageRate" class="text-danger"></span>
+                <label asp-for="CategoryList" class="control-label"></label>
+                <select id="multiple" asp-for="SelectedCategory" multiple="multiple" class="selectpicker form-control" asp-items="Model.CategoryList">
+                </select>
             </div>
+            <div class="form-group">
+                <a href="@("Images/"+Model.Document.Image)">
+                    <img src="@("~/Images/"+Model.Document.Image)" asp-append-version="true" width="50" height="50" />
+                </a>
+                <input type="hidden" asp-for="Document.Image" />
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input asp-for="ImageFile" accept="image/*" />
+                <span asp-validation-for="Document.Image" class="text-danger"></span>
+            </div>
+
+
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
