CRUD-Document: Detail and Delete
CRUD-Document: Detail and Delete.

--- a/ELibrary_Team 1/Areas/Authenticated/Views/Document/Create.cshtml
+++ b/ELibrary_Team 1/Areas/Authenticated/Views/Document/Create.cshtml
@@ -43,8 +43,8 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="CategoryList" class="control-label"></label>
-                <select id="multiple" asp-for="SelectedCategory" multiple="multiple" class="selectpicker form-control" asp-items="Model.CategoryList">
+                <label asp-for="CategorySelectList" class="control-label"></label>
+                <select id="multiple" asp-for="CategorySelectList" multiple="multiple" class="selectpicker form-control" asp-items="Model.CategorySelectList">
                 </select>
             </div>
             <div class="form-group">
