--- a/ELibrary_Team 1/Areas/Authenticated/Views/Document/Edit.cshtml
+++ b/ELibrary_Team 1/Areas/Authenticated/Views/Document/Edit.cshtml
@@ -12,6 +12,7 @@
         <form enctype="multipart/form-data" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Document.Id" />
+
             <div class="form-group">
                 <label asp-for="Document.Title" class="control-label"></label>
                 <input asp-for="Document.Title" class="form-control" />
@@ -35,8 +36,8 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="CategoryList" class="control-label"></label>
-                <select id="multiple" asp-for="SelectedCategory" multiple="multiple" class="selectpicker form-control" asp-items="Model.CategoryList">
+                <label asp-for="CategorySelectList" class="control-label"></label>
+                <select id="multiple" asp-for="CurrentCategoryList" multiple="multiple" class="selectpicker form-control" asp-items="Model.CategorySelectList">
                 </select>
             </div>
             <div class="form-group">
@@ -55,6 +56,7 @@
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
+        
     </div>
 </div>
 
