--- a/ELibrary_Team 1/Areas/Authenticated/Views/Document/_ViewAll.cshtml
+++ b/ELibrary_Team 1/Areas/Authenticated/Views/Document/_ViewAll.cshtml
@@ -50,8 +50,8 @@
           
             <td>
                 <div>
-                    <a onclick="showInPopup('@Url.Action("AddOrEdit","Document",new {id=item.Id},Context.Request.Scheme)','Update Document')" class="btn btn-info text-white"><i class="fas fa-pencil-alt"></i> Edit</a>
-                    <a onclick="showInPopup('@Url.Action("Details","Document",new {id=item.Id},Context.Request.Scheme)','Detail Document')" class="btn btn-info text-white"><i class="fas fa-pencil-alt"></i>Detail</a>
+                    <a onclick="showInPopup('@Url.Action("AddOrEdit","Document",new {id=item.Id},Context.Request.Scheme)','Update Document')" class="btn btn-info text-white" style="cursor : pointer"><i class="fas fa-pencil-alt"></i> Edit</a>
+                    <a onclick="showInPopup('@Url.Action("Details","Document",new {id=item.Id},Context.Request.Scheme)','Detail Document')" class="btn btn-info text-white" style="cursor : pointer" ><i class="fas fa-pencil-alt"></i>Detail</a>
                     <form asp-action="Delete" asp-route-id="@item.Id" onsubmit="return jQueryAjaxDelete(this)" class="d-inline">
                         <input type="hidden" asp-for="@item.Id" />
                         <input type="submit" value="Delete" class="btn btn-danger" />
