--- a/ELibrary_Team 1/Views/Shared/_Layout.cshtml
+++ b/ELibrary_Team 1/Views/Shared/_Layout.cshtml
@@ -20,19 +20,19 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
+                    @await Html.PartialAsync("_LoginPartial")
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Authenticated" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Authenticated" asp-controller="Document" asp-action="Index">Document</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Document" asp-action="Index">Document</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Authenticated" asp-controller="Chapter" asp-action="Index">Chapter</a>
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Chapter" asp-action="Index">Chapter</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
