--- a/ELibrary_Team 1/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ELibrary_Team 1/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model RegisterModel
+@using Elibrary_Team1_Ulitity
 @{
     ViewData["Title"] = "Register";
 }
@@ -12,11 +13,6 @@
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.UserName"></label>
-                <input asp-for="Input.UserName" class="form-control" />
-                <span asp-validation-for="Input.UserName" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
@@ -31,6 +27,10 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Role"></label>
+                @Html.DropDownListFor(m => m.Input.Role, Model.Input.RoleList, "-Select Role", new { @class = "form-control" })
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
