--- a/ELibrary_Team 1/Views/Home/Index.cshtml
+++ b/ELibrary_Team 1/Views/Home/Index.cshtml
@@ -1,5 +1,13 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<ELibrary_Team_1.Models.Document>
+
 @{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+@section Scripts{
+    <link rel="stylesheet" href="~/css/home.css" />
+}
+
+
+@await Html.PartialAsync("_ViewCatalog", Model)
