Change js file structure
Change js file structure

--- a/ELibrary_Team 1/Areas/Admin/Views/Category/Index.cshtml
+++ b/ELibrary_Team 1/Areas/Admin/Views/Category/Index.cshtml
@@ -26,5 +26,5 @@
     </table>
 </div>
 @section Scripts{
-    <script src="~/js/category.js"></script>
+    <script src="~/js/admin/category.js"></script>
 }
