--- a/ELibrary_Team 1/Areas/Admin/Views/Document/AddOrEdit.cshtml
+++ b/ELibrary_Team 1/Areas/Admin/Views/Document/AddOrEdit.cshtml
@@ -67,6 +67,6 @@
     <a asp-action="Index">Back to List</a>
 </div>
 @section Scripts{
-    <script src="~/js/document.js"></script>
+    <script src="~/js/admin/document.js"></script>
 }
 
