--- a/ELibrary_Team 1/Areas/Admin/Views/Document/Index.cshtml
+++ b/ELibrary_Team 1/Areas/Admin/Views/Document/Index.cshtml
@@ -29,6 +29,6 @@
 
 @section Scripts{
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-<script src="~/js/document.js"></script>
+<script src="~/js/admin/document.js"></script>
 }
 
