Dropdown link for admin panel
Dropdown link for admin panel

--- a/ELibrary_Team 1/Views/Home/Index.cshtml
+++ b/ELibrary_Team 1/Views/Home/Index.cshtml
@@ -9,5 +9,7 @@
     <link rel="stylesheet" href="~/css/home.css" />
 }
 
+<div>
+    @await Html.PartialAsync("_ViewCatalog", Model)
+</div>
 
-@await Html.PartialAsync("_ViewCatalog", Model)
