--- a/ELibrary_Team 1/Areas/Admin/Views/User/Index.cshtml
+++ b/ELibrary_Team 1/Areas/Admin/Views/User/Index.cshtml
@@ -21,8 +21,9 @@
     <table id="tblData" class="table table-striped table-bordered" style="width:100%">
         <thead class="thead-dark">
             <tr class="table-info">
-                <th>Name</th>
+                <th>Username</th>
                 <th>Email</th>
+                <th>Full Name</th>
                 <th>Role</th>
                 <th></th>
             </tr>
@@ -30,5 +31,5 @@
     </table>
 </div>
 @section Scripts{
-    <script src="~/js/user.js"></script>
+    <script src="~/js/admin/user.js"></script>
 }
