--- a/ELibrary_Team 1/wwwroot/css/home.css
+++ b/ELibrary_Team 1/wwwroot/css/home.css
@@ -1,5 +1,5 @@
 ﻿:root {
-    --jumbotron-padding-y: 3rem;
+    --jumbotron-padding-y: 1rem;
 }
 
 .jumbotron {
@@ -29,14 +29,14 @@
     max-width: 40rem;
 }
 
-footer {
+/*footer {
     padding-top: 3rem;
     padding-bottom: 3rem;
-}
+}*/
 
-    footer p {
+/*    footer p {
         margin-bottom: .25rem;
-    }
+    }*/
 
 .box-shadow {
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
