--- a/ELibrary_Team 1/Views/Shared/_Layout.cshtml
+++ b/ELibrary_Team 1/Views/Shared/_Layout.cshtml
@@ -43,8 +43,7 @@
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Document" asp-action="Index">Document</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Chapter" asp-action="Index">Chapter</a>
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">User</a>
-                                <a class="dropdown-item" asp-area="Admin" asp-controller="#" asp-action="Index">#</a>
+                                <a class="dropdown-item" asp-page="/Role/Index" asp-area="Admin" >Role</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Something else here</a>
                             </div>
