--- a/ELibrary_Team 1/Areas/Unauthenticated/Views/Home/Index.cshtml
+++ b/ELibrary_Team 1/Areas/Unauthenticated/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<ELibrary_Team_1.Models.Document>
+
+@{
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@section Scripts{
+    <link rel="stylesheet" href="~/css/home.css" />
+}
+
+<div>
+    @await Html.PartialAsync("_ViewCatalog", Model)
 </div>
+
