--- a/ELibrary_Team 1/Areas/Unauthenticated/Views/Document/ChapterModalPopUp.cshtml
+++ b/ELibrary_Team 1/Areas/Unauthenticated/Views/Document/ChapterModalPopUp.cshtml
@@ -7,20 +7,34 @@
 
 <div class="row">
     <div class="col-xl">
-        
-                <h5 class="card-title">@Model.Document.Title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">@Model.Number: @Model.Title</h6>
-                <p class="card-text">@Model.Content</p>
-                <div>
-                    <button type="button" class="btn btn-default btn-prev">Prev</button>
-                    <button type="button" class="btn btn-default btn-next">Next</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-                <div>
 
-                </div>
-            
-        
+
+        @if (ViewBag.AccessStatus == false)
+        {
+            <h6>@ViewBag.ChapterTitle</h6>
+            <h5>You do not have permission to access this chapter.</h5>
+            <h5>Submit a request for access</h5>
+        }
+        else
+        {
+            <h6 class="card-subtitle mb-2 text-muted">@Model.Number: @Model.Title</h6>
+            <p class="card-text">@Model.Content</p>
+
+        }
+        <hr />
+        <div>
+            <button type="button" class="btn btn-default btn-prev">Prev</button>
+            <button type="button" class="btn btn-default btn-next">Next</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+        <div>
+
+        </div>
+
+
+
+
+
     </div>
 </div>
 
