--- a/ELibrary_Team 1/Areas/Unauthenticated/Views/Document/Details.cshtml
+++ b/ELibrary_Team 1/Areas/Unauthenticated/Views/Document/Details.cshtml
@@ -26,28 +26,52 @@
                     </p>
                     <p class="product-description"><b>Description: </b>@Model.Description</p>
                     <p><b>View: </b>@Model.AccessRequests.Where(x => x.IsAccept == true).Count()</p>
-                    <p><b>Rate: </b>@Model.AverageRate<span>(@Model.UserVotes.Count() vote)</span></p>
-                    <h3>Chapters List</h3>
-                    <div id="chapterList">
-                        @foreach (var item in ViewBag.Chapters)
-                        {
-                            <div>
-                                <a style="line-height: 1.2" class="btn-link"
-                                   onclick="showInPopup('@Url.Action("GetChapter","Document",new {title = item.Title, number = item.Number,id=item.Id},Context.Request.Scheme)')">
-                                    @item.Number<span>: </span>@item.Title
+                    <p><b>Rate: </b>@Model.AverageRate<span>(@Model.UserVotes.Count() vote)</span></p>                    
+                    <div>
+                        <div>
+                            <h4 id="listHeading">Chapters List</h4>
+
+                            @if (ViewBag.RequestStatus == null)
+                            {
+                                <a onclick=LockUnlock(@Model.Id) class="btn btn-success text-white" style="cursor:pointer; width:300px;">
+                                    <i class="fas fa-lock"></i>  Send request to read full
                                 </a>
-                            </div>
-                        }
+                            }
+                            else
+                            {
+                                if (ViewBag.RequestStatus == false)
+                                {
+                                    <a class="btnButton btn btn-info text-white">
+                                        Wait for allowed
+                                    </a>
+                                }
+                                else
+                                {
+                                    <a class="btnButton btn btn-info text-white">
+                                        You are accessed full document
+                                    </a>
+                                }
+                            }
+
+                        </div>
+                        <div id="chapterList">
+                            @foreach (var item in ViewBag.Chapters)
+                            {
+                                <div>
+                                    <a style="line-height: 1.2" class="btn-link"
+                                       onclick="showInPopup('@Url.Action("GetChapter","Document",new {title=item.Title, number=item.Number,id =item.Id},Context.Request.Scheme)')">
+                                        @item.Number<span>: </span>@item.Title
+                                    </a>
+                                </div>
+                            }
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
 
-    <div class="col-xs-12">
-        
-
-    </div>
 </div>
 
 
@@ -55,6 +79,9 @@
 <div class="modal" tabindex="-1" role="dialog" id="chapter-modal">
     <div class="modal-dialog w-75 mw-100 h-75 mh-100 modal-dialog-scrollable"  role="document">
         <div class="modal-content">
+            <div class="modal-header">
+                <h3>@Model.Title</h3>
+            </div>
             <div class="modal-body">
             </div>
 
@@ -71,9 +98,19 @@
         height: 200px;
         overflow: scroll;
     }
+    #chapterList .btn-link:hover{
+        color: blue;
+    }
 
+    #btnRequest{
+        display: inline-block;
+        
+            
+    }
 
-
+    #listHeading{
+        display: inline-block
+    }
 </style>
   
 <script type="text/javascript">
@@ -93,4 +130,26 @@
         })
     }
 
+
+
+function LockUnlock(id) {
+  
+    $.ajax({
+
+        type: "POST",
+        url: "@Url.Action("SendAccessRequest", "Document")",
+        data: { documentId: id },
+
+        success: function (data) {
+            if (data.success) {
+                toastr.success(data.message);
+                window.location.reload();
+            }
+            else
+                toastr.error(data.message);
+        }
+    });
+    
+
+}
 </script> 
